--- a/resources/app/public/index.html
+++ b/resources/app/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Megabattle Launcher</title>
+    <title>Megabattle Launcher v2.0</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
